--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,11 +29,11 @@ jobs:
       with:
         path: |
           ~/.konan
-        key: ${{ hashFiles('**/.lock') }}
-    - name: Set up JDK 17
+        key: build-${{ hashFiles('**/.lock') }}
+    - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
+        java-version: '21'
         distribution: 'temurin'
     - name: Build with Gradle
       uses: gradle/gradle-build-action@ce999babab2de1c4b649dc15f0ee67e6246c994f
